new var in dta file

--- a/writeup/research_design.tex
+++ b/writeup/research_design.tex
@@ -59,6 +59,18 @@ Operationalization of the dependent variable, i.e. the gap in the government's t
 	\item Hard measures of the business experience (similar to the Enterprises Survey)
 \end{itemize}
 
+\begin{figure}[!ht]
+\includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/by_restrict_owner-labor-equity}
+\caption{The relationship between a province's FDI bias and attitude towards the private sector}
+\label{fig:by_restrict_owner}
+\end{figure}
+
+\begin{figure}[!ht]
+\includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/by_restrict_performance-connection}
+\caption{The relationship between a province's FDI bias and attitude towards the private sector}
+\label{fig:by_restrict_performance}
+\end{figure}
+
 \subsection{Conjoint analysis}
 
 The crucial causal mechanism in my theory is the utility calculation of provincial officials. However, observational data does not allow us to fully examine this key step because what the officials truly want may not be fulfilled due to external factors and thus cannot be observed. Furthermore, what an official wants from a FDI firm is often hard to tease out completely. A big FDI firm is an attractive source of rent, but it also brings job and technology. Indeed, perhaps this high correlation is precisely why it is so easy for officials to extract rent from FDI under the guise of promoting economic development.
