mid writing back up

--- a/writeup/conjoint_experiment.tex
+++ b/writeup/conjoint_experiment.tex
@@ -25,3 +25,11 @@ The five dimensions will be given random values as follows.
 \item Land:
 \item Technology age: 
 \end{itemize}
+
+If desired, it is possible to:
+\begin{itemize}
+\item adjust the design so that implausible hypotheticals will not appear (i.e. there should not be a high-tech company with very small capital).
+\item randomize the ordering of the characteristics between respondents to test for the ordering effect (i.e. knowing a firm's industry first changes how the respondent thinks about the other characteristics)
+\end{itemize}
+
+I am mainly interested in the ``average marginal component effect'' (AMCE) of \textit{land}, which is the marginal effect of \textit{land} on the likelihood of a project being preferred, averaged over the distribution of all the other components. This allows us to back-out what provincial officials truly want from a FDI project.
