--- a/writeup/proposal.tex
+++ b/writeup/proposal.tex
@@ -63,7 +63,7 @@
 \section{Tentative evidence}
 \input{preliminary_evidence}
 
-\section{Theory}
+\section{Theory and Measurement}
 \input{theory}
 
 
