--- a/writeup/theory.tex
+++ b/writeup/theory.tex
@@ -1,33 +1,66 @@
-My theory aims to explain the gap in the treatment of domestic firms versus foreign firms. The argument will be laid out in three steps:
+My theory aims to explain the lack of technological spillover from foreign firms to private firms. I define foreign firms as firms with over 50\% The argument will be laid out in three steps:
 
 \begin{enumerate}
-\item I argue that for FDI to have a spillover and growth enhancing effect, the domestic sector must also be healthy. Therefore, if we see the a gap in the treatment of domestic firms versus foreign firms, it must mean that the government is attracting FDI for reasons other than growth.
-\item I argue that corruption (i.e. rent from foreign firms) is one such reason. If that is the case, the testable implication is that the presence of large FDI firms in corrupt countries (sectors) is associated with a large gap in the treatment of domestic versus foreign firms in those countries (sectors). At this step, the level of corruption in a country (sector) is treated as exogenous.
+\item I argue that for FDI to have a growth enhancing effect, there must be technological spillover from foreign firms to private firms. Therefore, if we see that there is little technological spillover, it must mean that the government is attracting FDI for reasons other than growth.
 
-\item I endogenize the choice of government officials to engage in corruption by explicitly considering their utility maximization. To get a handle on the options available to the officials, I hold the political system constant by focusing on the case of Vietnam. With its provincial variation in FDI and private sector development, Vietnam serves as an insightful microcosm of the cross-national differences. I argue that, in Vietnam, whether the domestic sector is discriminated depends on the choice of the provincial official to choose between the rent of FDI firms and promotion to the central government, of which private sector development is an important criterion. 
-\end{enumerate}
-
-It is important to note that the dependent variable is \textit{not} the size of the domestic sector. First, the size of the domestic sector is a poor proxy for the government's discrimination against domestic firms in favor of foreign firms. Second, it is also a highly endogenous variable because there is definitely reverse causality between the presence of FDI (a key independent variable) and the size of the domestic sector.
-
-\subsection{The spillover effect of FDI depends on having a strong domestic sector}
-
-There are several channels through which spillover can happen, all of which require a strong domestic sector.
+Measuring technological spillover:
 \begin{itemize}
-	\item imitation:  domestic firms may reverse engineer a production or management technique \citep{Wang1992}. This requires 1) a small, surmountable technological gap \citep{Kokko1996}, and 2) backward linkage between local and foreign firms \citep{Javorcik2004}. Therefore, it is necessary to have technologically competent local firms that are able to supply inputs to foreign firms.
-	\item skills acquisition: workers trained in foreign firms bring along their human capital when they move to domestic firms \citep{Djankov2000}. This presumes a healthy domestic sector that can offer competitive wages to workers. 
-	\item competition: similar to arm's length trade, the presence of foreign firms put pressure on domestic firms to reduce inefficiency \citep{Glass2002}. For this mechanism to work, the domestic sector must survive instead of being squeezed out of market by foreign firms.
-	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This process, too, requires a strong domestic sector that is able to engage in commercial linkages with foreign firms.
+\item Frequency of contacts between foreign and private firms (cite literature on spillover happen through contact here)
+\item The actual increase in productivity and technological capability of private firms
 \end{itemize}
 
-In sum, the spillover effect of FDI depends on a strong domestic sector. Therefore, if a government is truly interested in FDI for its spillover and growth-enhancing effect, the government must be equally interested, if not more, in nurturing the absorptive capacity of domestic firms. Holding constant firm characteristics (size, sector, technological capacity, etc.), if we find that domestic firms receive worse treatment by the government, this can be evidence that the government is not primarily interested in the spillover effect of FDI, but potentially rent seeking.
 
-Anticipating alternative explanations, there are reasons for countries to attract FDI other than growth and corruption, such as jobs, capital, and balance of payments. Fortunately, these alternative explanations can be controlled for. Moreover, these factors may account for the enthusiasm of the government towards FDI, but cannot fully explain the discrimination against domestic firms in favor of FDI. Indeed, many factors that are attractive to foreign firms (e.g. skilled labor force, good infrastructure, good governance) has high fixed cost but low marginal cost, and thus should be easily extended to domestic firms. Therefore, if corruption is not the government wants FDI, the domestic sector would benefit instead of being discriminated against.
+\item I argue that corruption (i.e. bribes from foreign firms) is one reason (besides growth) that the government wants FDI for. The testable implication is that corruption countries (sectors) is associated with a lack of technological spillover between foreign and private firms in that countries (sectors). At this step, the level of corruption in a country (sector) is treated as exogenous.
+
+For this argument to be convincing, one must take into account alternative explanations, i.e. reasons besides corruption and growth that governments may want FDI for:
+\begin{itemize} 
+\item Employment: under strong pressure for employment generation, the government may want FDI purely for the jobs it brings instead of the long-term economic growth. To account for this alternative explanation, I will control for the growth rate of labor force. Since the labor force growth is largely determined 18-20 years prior, it is plausibly exogenous to other variables in the current period and thus well-behaved statistically.  
+\item Capital: In the early-stage of development, a country may deliberately pursue a capital-driven instead of technology-driven growth. To account for this alternative explanation, I will control for the aggregate capital stock or the national savings rate.
+\item Election cycle: Much research has shown that the election calendar puts populist pressure on the government, leading to manipulation of macroeconomic factors such as the exchange rate \citep{Blomberg2001}. Similarly, one may argue that the government wants to attract many FDI projects for a positive headline near election time even though these projects do not have a large impact on long-term growth. To account for this alternative explanation, I will control for whether a FDI project begins in an election year.
+\end{itemize}
+
+\item I endogenize the choice of government officials to engage in corruption by explicitly considering their utility maximization. To get a handle on the options available to the officials, I hold the political system constant by focusing on the case of Vietnam. With its provincial variation in FDI attraction and private sector development, Vietnam's provinces serve as an insightful microcosm of the cross-national differences. I argue that, in Vietnam, whether there is spillover between the foreign and the private sector depends on the choice of provincial officials to choose between potential rents brought by foreign firms and promotions by the central government, of which private sector development is an important criterion.
+\end{enumerate}
+
+\subsection{The growth enhancing effect of FDI depends on spillover of technology}
+
+As well-known from neoclassical growth theory, the diminishing return to capital will at one point stop capital from accumulating further, preventing long-run economic growth to be permanently driven by capital accumulation alone \citep{Solow1956}. Therefore, long-run growth ultimately requires technological innovation, which continually increases the productivity of capital and counteracts the diminishing returns.
+
+This insight implies that FDI cannot promote the host country's growth simply from the amount of capital it brings. This explains the uncertain impact of FDI on growth and poverty reduction \citep{Nair-Reichert2001, Carkovic2002, Guerra2009}. Indeed, scholars have found that FDI can only a growth-enhancing impact if there is technological spillover from the foreign to the domestic sectors \citep{Nunnenkamp2004}. This empirical finding provides support for \citet{Findlay1978}'s model, in which technology spillover from foreign firms shift the domestic factor-price frontier to the right, allowing more output from the same input, resulting in higher profits and higher wages (i.e. higher savings) for the domestic sector. This ultimately leads to a continually increasing domestic capital stock.
+
+As economists attempt to improve neoclassical growth theory by endogenizing technological progress, FDI researchers similarly investigate how technology spillover from FDI may happen instead of assuming its inevitability \citep{Romer1994}. Several channels for spillovers have been proposed.
+
+These channels are:
+\begin{itemize}
+	\item imitation:  private firms may reverse engineer a production or management technique \citep{Wang1992}, which is facilitated by backward linkage between local and foreign firms \citep{Javorcik2004}. This motivates my first measure of spillover effect: \% of private firms that participate in contracts with foreign firms.
+	\item competition: similar to the effect of competition from arm's length trade on productivity, the presence of foreign firms in the domestic market put pressure on local firms to reduce inefficiency \citep{Glass2002}. (Doing Business has firm-level data on the number of private/state/foreign competitors in the last year)
+	\item export demonstration: foreign firms are more knowledgeable about exporting, which involves high fixed cost to set up a distribution and transport infrastructure, or learning about foreign taste and regulatory environment. Domestic firms can learn this ``export know-how'' from foreign firms \citep{Aitken1997}. This motivates my third measure of spillover effect: \% of private firms that export.
+	\item skills acquisition: workers trained in foreign firms bring along their human capital when they move to domestic firms \citep{Djankov2000}. This presumes a healthy domestic sector that can offer competitive wages to workers.
+\end{itemize}
+
+Among these channels, \textit{imitation} and \textit{export demonstration} forms the theoretical basis of my measurement of spillover.
 
 \subsection{FDI and corruption (cross-nationally and cross-sectorally)}
 
-My hypothesis that host country officials engage in corruption with foreign firms to the detriment of domestic firm is a novel contribution to the IPE literature of FDI and corruption. So far, the literature has been predominantly dominated by studies showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. But what about firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, and professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. On the other hand, some argue that foreign firms, disadvantaged by their foreignness, have to bribe more and exacerbate corruption \citep{Hellman2002}. In all of these works, corruption between the host government and the foreign firm is conceptualized as \textit{predatory}.
+\subsubsection{Defining corruption}
 
-My theory advances the literature by arguing that corruption between the host country and the foreign firm can be \textit{collusive}. Not all foreign firms are underdog, forced to bribe to equalize the playing field. If foreign firms enjoy regulatory privilege, they do not want to relinquish it. If foreign firms are themselves in collusion with the government, there is by definition no demonstration or professionalization effect. Indeed, foreign firms have bribed to get an upper hand in the local market\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. In these cases, the foreign firm and the host country enter a collusive relationship, resulting in the maltreatment of domestic firms.
+Defining corruption has been a long-standing and inconclusive debate (cite). The contention stems from the normative nature of the ``corruption'' concept, which shifts significantly across context and thus difficult to build an analytical edifice upon. 
+
+Consider the most common definition of corruption as ``the abuse of the public role for private gains.'' Make no mistake, this definition is not always clear cut. What constitutes ``abuse''? The term implies the violation of certain standards, which only further asks: what standards are supposed to be adhered to? Some scholars may emphasize a set of standards based on formal law, but the law is not always legitimate (cite). Yet others argue for a set of standards based on norms, but difference in norms across societies may be so extensive and unsystematic that a cross-country analysis untenable. Indeed, nepotism and cronyism in one society may be social capital in another, with all shades of favoritism in between (cite Understanding Corruption). 
+
+In addition, the distinction between ``public'' and ``private'' are not always clear, especially during rapid economic liberalization and privatization. As the rules change continuously, the dividing line between an innovator and a rule-breaker is but a thread left blowing in the political wind (cite China's corruption book).
+
+Mindful of this definition's shortcomings, I still choose to define corruption as the ``abuse of public role for private gains'' in my research. This is because while this definition may fail as a universal classification of corrupt act, within the scope of my research project its unclarities are largely resolved. First, regarding the potential unclarity over ``abuse'', I will focus on a law-centric definition of violation because of its precision, stability, and broad coverage. The legitimacy of the ``law'' is not as big of a concern as the countries in the sample have sovereignty over their territory and their law has a binding impact in their economic life, especially the formal sectors in which foreign firms operate. (List the countries in the doing business survey, and whether any of them is a failed state). In addition, a law-centric definition fits well with the way corruption is often framed in business surveys, my main source of data, as ``paying informal fees.'' Regardless of whether the respondents think these fees are legitimate or not, it is clear to both the officials and the firms whether these fees are official, as documented in formal laws.
+
+Second, the ``public'' and ``private'' divide is also clear cut within the scope of my project. I focus on corrupt acts in the context of officials exchanging public resources under their control for bribes from foreign firms, for example, expedited paper work, access to land, and harass-free inspections. It is clear that these public resources and services should be distributed fairly, and that the payments are going to the officials' private wealth instead of the state's coffer.
+
+\subsubsection{The relationship between corruption and FDI}
+
+My hypothesis that host country officials engage in corruption with foreign firms to the detriment of domestic firms is a novel contribution to the IPE literature of FDI and corruption. So far, the literature has been predominantly dominated by studies showing that a high level of corruption deters FDI \citep{Wei2000, Hakkala2008, Al-Sadig2009}. (Summarize a bit here) But what about firms that choose to invest in a highly corrupt environment nonetheless? One strain of the literature argues that foreign firms can help reduce corruption in host country via regulatory pressure effect, demonstration effect, and professionalization effect \citep{Kwok2006}; or via competing away the rents of the domestic firms, reducing the supply of bribes \citep{Sandholtz2003}. In these works, corruption between the host government and the foreign firm has been conceptualized as \textit{predatory}.
+
+My research offers a new perspective, recognizing that, compared to domestic firms, foreign firms always have the freedom to move out of the country or at least stop bringing in capital. Therefore, the exchange between the host government and the foreign firm will always have a \textit{voluntary} element.\footnote{There is an argument about FDI being harder to relocate, and thus subject to creeping expropriation. However, corruption doesn't tend to change that quickly, and a foreign investor looks into a country knows relatively well the level of corruption that they are getting involved with.} Through this angle, corruption between the government and the foreign firm can be \textit{collusive}, as governments get bribe while foreign firms get advantages over domestic firms in terms of an expedited bureaucracy or privileged use of public resources \citep{Hellman2002}. Indeed, there are evidence of foreign firms bribing to get an upper hand in the local market\footnote{http://www.nytimes.com/2012/04/22/business/at-wal-mart-in-mexico-a-bribe-inquiry-silenced.html?pagewanted=all} or to pursue rent in protected industries \citep{Malesky2015}. Such collusive relationship between the government and foreign firm may be the key to explain the puzzle of governments wanting to attract a lot of FDI despite the lack of developmental impact.
+
+\subsubsection{The model of interaction between foreign firms and officials}
 
 The sequencing of the game is as follows:
 \begin{enumerate}
@@ -39,12 +72,14 @@ The sequencing of the game is as follows:
 
 The theory leads to two testable hypotheses:
 
+(ADD MORE TESTABLE HYPOTHESIS about the intermediate process here)
+
 \begin{quote}
-Hypothesis: The presence of large FDI firms in corrupt countries is associated with a large gap in the government's treatment of domestic firms and foreign firms in those countries.
+Hypothesis: The presence of large FDI firms in corrupt countries is associated with a lack of technological spillover in those countries.
 \end{quote}
 
 \begin{quote}
-Hypothesis: The presence of large FDI firms in corrupt sectors is associated with a large gap in the government's treatment of domestic firms and foreign firms in those sectors.
+Hypothesis: The presence of large FDI firms in corrupt sectors is associated with a lack of technological spillover in those sectors.
 \end{quote}
 
 \subsection{Endogenizing government officials' decision to engage in corruption with foreign firm}
